--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
       <!-- Chat messages will appear here -->
     </div>
     <div class="input-container">
-      <input type="text" id="chat-input" placeholder="Type a message...">
+      <input type="text" id="chat-input" placeholder="Type a message..." autofocus>
       <button id="send-btn" aria-label="Send your message">Send</button>
     </div>
   </div>
